<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_data">Data</string>
    <string name="menu_web_view">Browser</string>
    <string name="menu_player">Player</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_audio_record">Recorder</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_work_with_files">Work with files</string>
    <string name="menu_network">Info from network</string>
    <string name="menu_maps">Institutions</string>

    <string name="text_1">Toyota Progrès (トヨタ・プログレ) - среднеразмерный седан представительского класса, продававшийся в Японии с 1998 по 2007 год. В апреле 2001 года произошел рестаилинг, основными отличиями которого от дорестайлинга стали двигатели с непосредственным впрыском топлива (D-4) и 5-ступенчатые АКПП вместо 4-ступенчатых.</string>
    <string name="text_2">У Toyota Progrès есть 2 варианта двигателя: 1JZ-GE (с 2001 г. 1JZ-FSE) объемом 2.5 л мощностью 200 л.с. и 2JZ-GE (с 2001 г. 2JZ-FSE) объемом 3 л мощностью 220 л.с. Существуют заднеприводные и полноприводные модификации. Данная модель построена на платформе Toyota Mark II восьмого поколения (JZX100).</string>
    <string name="text_3">Рекламный слоган Toyota Progrès - 「小さな高級車」- small luxury car. Его размеры - длина 4.5 м, ширина 1.7 м - сопоставимы с Mercedes-Benz C-Class и BMW 3-й серии, при этом оснащение салона на уровне Toyota Crown и Toyota Celsior (Lexus LS) - сиденья из натуральной кожи, жаккардовой ткани или нубука, отделка салона натуральным деревом, адаптивный круиз-контроль, камеры, навигация и т.д.</string>

    <string name="music_player">Music Player</string>
    <string name="track_name">Song I am. - Roselia</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:
%2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for de-
tails.</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="button_launch_main_activity">Launch app</string>

    <string name="weather">Погода:</string>
    <string name="temperature">Температура:</string>
    <string name="wind_speed">Скорость ветра:</string>
    <string name="button_load">Загрузить</string>

    <string name="work_with_files_title">Шифр Цезаря</string>
    <string name="work_with_files_message_hint">Сообщение</string>
    <string name="work_with_files_shift_hint">Сдвиг</string>

    <string name="profile_title">Профиль студента</string>
    <string name="profile_name">ФИО</string>
    <string name="profile_group">Группа</string>
    <string name="profile_id">Номер зачетной книжки</string>
    <string name="profile_button_save">Сохранить</string>
    <string name="profile_button_load">Загрузить</string>

    <string name="camera_last_name">Фамилия</string>
    <string name="camera_first_name">Имя</string>
    <string name="camera_patronymic">Отчество</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>