<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_web_view"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_web_view" />
        <item
            android:id="@+id/nav_player"
            android:icon="@android:drawable/stat_sys_headset"
            android:title="@string/menu_player"/>
        <item
            android:id="@+id/nav_sensor"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_sensor"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera"/>
        <item
            android:id="@+id/nav_audio_record"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_audio_record"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_work_with_files"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_work_with_files"/>
        <item
            android:id="@+id/nav_network"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/menu_network"/>
    </group>
</menu>