<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.frolikov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.frolikov.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.frolikov.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_web_view"
        android:name="ru.mirea.frolikov.mireaproject.WebViewFragment"
        android:label="@string/menu_web_view"
        tools:layout="@layout/fragment_webview" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.frolikov.mireaproject.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_player"
        android:name="ru.mirea.frolikov.mireaproject.PlayerFragment"
        android:label="@string/menu_player"
        tools:layout="@layout/fragment_player" />
    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.frolikov.mireaproject.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.frolikov.mireaproject.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_audio_record"
        android:name="ru.mirea.frolikov.mireaproject.AudioRecordFragment"
        android:label="@string/menu_audio_record"
        tools:layout="@layout/fragment_audio_record" />
</navigation>